[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "manim3"
version = "0.1.0-alpha"
description = "A personal variant of manim"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
authors = [
    {name = "YishiMichael"}
]
classifiers = [
    "Programming Language :: Python"
]
dependencies = [
    "attrs",
    "cairocffi",
    "colour",
    "ffmpeg-python",
    "mapbox-earcut",
    "moderngl",
    "numpy",
    "pangocairocffi",
    "pangocffi",
    "pillow",
    "pyclipr",
    "pyglet",
    "rich",
    "scipy",
    "svgelements"
]
