[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "manim3"
version = "0.1.0"
description = "A personal variant of manim"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
authors = [
    {name = "YishiMichael"}
]
classifiers = [
    "Programming Language :: Python"
]
dependencies = [
    "attrs",
    "colour",
    "ffmpeg-python",
    "lru-dict",
    "mapbox-earcut",
    "moderngl",
    "numpy",
    "pillow",
    "pyclipr",
    "pyglet",
    "rich",
    "svgelements"
]
